# SortingProject

./: CMakeLists.txt  DoubleSorting.cpp  DoubleSorting.h  FloatSorting.cpp  FloatSorting.h  Generator.cpp  Generator.h  IntSorting.cpp  IntSorting.h  Menu.cpp  Menu.h  badania.cpp  badania.h  main.cpp
